--- a/NodumVisualCalculator/Components/MainNodeComponent.razor
+++ b/NodumVisualCalculator/Components/MainNodeComponent.razor
@@ -21,21 +21,21 @@
         </svg>
 
         <DraggableZone Height="100%" Width="100%">
-            @foreach (var node in _currentMainNode.Nodes)
+            @foreach (var visualNode in _currentMainNode.VisualNodes)
             {
-                <DraggableWindow @key="node" X="@node.Position.X" Y="@node.Position.Y" AllowDrag="true" OnDragingWindow="@((e, w) => OnNodeDragging(e, w, node))">
+                <DraggableWindow @key="visualNode" X="@visualNode.Position.X" Y="@visualNode.Position.Y" AllowDrag="true" OnDragingWindow="@((e, w) => OnNodeDragging(e, w, visualNode))">
                     <WindowHeader>
                         <div class="node-window-header">
-                            <div class="node-window-header-text">@node.Name (@node.Position.X, @node.Position.Y)</div>
+                            <div class="node-window-header-text">@visualNode.Name (@visualNode.Position.X, @visualNode.Position.Y)</div>
                             <div class="node-window-header-buttons">
-                                <img class="node-window-header-button" src="/image/OptionsButton.png" @onclick="@(() => EditNode(node))">
-                                <img class="node-window-header-button" src="/image/CloseButton.png" @onclick="@(() => CloseWindow(node))">
+                                <img class="node-window-header-button" src="/image/OptionsButton.png">
+                                <img class="node-window-header-button" src="/image/CloseButton.png" @onclick="@(() => CloseWindow(visualNode))">
                             </div>
                         </div>
                     </WindowHeader>
                     <WindowContent>
                         <div class="node-window">
-                            <NodeComponent Node="@node" OnNodePinSelect="@((a, n) => OnNodeSelect(a, n))" OnNodePinConnect="@((a, n, i) => OnNodeConnect(a, n, i))" />
+                            <NodeComponent VisualNode="@visualNode" OnNodePinSelect="@((a, n) => OnNodeSelect(a, n))" OnNodePinConnect="@((a, n, i) => OnNodeConnect(a, n, i))" />
                         </div>
                     </WindowContent>
                 </DraggableWindow>
@@ -77,11 +77,11 @@
     }
 
     [Parameter]
-    public INodeHolder MainNode { get; set; }
+    public VisualNodeHolder MainNode { get; set; }
 
     private bool _isEditor = false;
 
-    private INodeHolder _currentMainNode;
+    private VisualNodeHolder _currentMainNode;
 
     private IOutputNode _selectedNode;
 
@@ -95,51 +95,7 @@
         _currentMainNode = MainNode;
     }
 
-    private void UpdateLines()
-    {
-        _currentMainNode?.Position.OnPositionChanged?.Invoke();
-
-        _allLines.Clear();
-        foreach (var node in _currentMainNode.Nodes)
-        {
-            AddLinesFromNode(node);
-        }
-
-        StateHasChanged();
-    }
-
-    private void AddLinesFromNode(INode node)
-    {
-        if (node is INodeHolder holder)
-        {
-            foreach (var n in holder.Nodes)
-            {
-                AddLinesFromNode(n);
-            }
-        }
-        else if (node is IInputNode lineableNodePin)
-        {
-            foreach (var connection in lineableNodePin.GetIncomingConnections())
-            {
-                if (connection != null)
-                {
-                    if (connection.OutputNodePin.Node.Showed && connection.OutputNodePin.Showed && connection.InputNodePin.Node.Showed && connection.InputNodePin.Showed)
-                    {
-                        _allLines.Add(
-                            new Line()
-                            {
-                                FromX = connection.OutputNodePin.Position.X,
-                                FromY = connection.OutputNodePin.Position.Y,
-                                ToX = connection.InputNodePin.Position.X,
-                                ToY = connection.InputNodePin.Position.Y
-                            });
-                    }
-                }
-            }
-        }
-    }
-
-    private void OnNodeSelect(MouseEventArgs args, IOutputNode outputNode)
+    private void OnNodeSelect(MouseEventArgs args, VisualNode visualNode)
     {
         _mainLine = new Line() { FromX = args.ClientX, FromY = args.ClientY };
 
@@ -151,9 +107,10 @@
             _mainLine.ToY = args.ClientY;
         }
 
-        _selectedNode = outputNode;
-
-        UpdateLines();
+        if (visualNode.Node is IOutputNode outputNode)
+        {
+            _selectedNode = outputNode;
+        }
     }
 
     private void DrawMainLine(MouseEventArgs args)
@@ -165,60 +122,44 @@
         }
     }
 
-    private void OnNodeConnect(MouseEventArgs args, IInputNode inputNode, int index)
+    private void OnNodeConnect(MouseEventArgs args, VisualNode inputNode, int index)
     {
         _isMainLineDrawing = false;
         _mainLine = new Line();
 
-        if (inputNode is ISingleInputNode singleInputNode)
+        if (inputNode.Node is ISingleInputNode singleInputNode)
         {
             singleInputNode.AddIncomingNode(_selectedNode);
         }
-        else if (inputNode is ICommutateInputNode commutateInputNode)
+        else if (inputNode.Node is ICommutateInputNode commutateInputNode)
         {
             commutateInputNode.AddIncomingNode(_selectedNode);
         }
-        else if (inputNode is IMultipleInputNode multipleInputNode)
+        else if (inputNode.Node is IMultipleInputNode multipleInputNode)
         {
             multipleInputNode.AddIncomingNode(_selectedNode, index);
         }
-
-        UpdateLines();
-    }
-
-    private void EditNode(INode window)
-    {
-        if (window is INodeHolder holder)
-        {
-            _currentMainNode = holder;
-        }
-        if (window is IValueNode)
-        {
-            window.Showed = !window.Showed;
-        }
-        StateHasChanged();
     }
 
     private void CreateNewNodeHolder()
     {
-        _currentMainNode.AddNode(new NodeHolder("Holder", _currentMainNode));
+        _currentMainNode.AddNode(new VisualNodeHolder("New Node Holder", _currentMainNode));
     }
 
     private void CreateNewNumberNode()
     {
-        _currentMainNode.AddNode(new InputDoubleNode("Number", _currentMainNode));
+        _currentMainNode.AddNode(new VisualNode(new InputDoubleNode("Number"), _currentMainNode));
     }
 
     private void CreateNewAddNode()
     {
-        _currentMainNode.AddNode(new DoubleAddFuncNode("Add", _currentMainNode));
+        _currentMainNode.AddNode(new VisualNode(new DoubleAddFuncNode("Add"), _currentMainNode));
     }
 
-    private void CloseWindow(INode window)
+    private void CloseWindow(IVisualNode window)
     {
         _currentMainNode.RemoveNode(window);
 
-        UpdateLines();
     }
 
     private void OnNodeStartDragging(MouseEventArgs args, DraggableWindow nodeWindow, INode node)
@@ -226,11 +167,9 @@
 
     }
 
-    private void OnNodeDragging(MouseEventArgs args, DraggableWindow nodeWindow, INode node)
+    private void OnNodeDragging(MouseEventArgs args, DraggableWindow nodeWindow, IVisualNode node)
     {
         node.Position.X = nodeWindow.Offset.Left;
         node.Position.Y = nodeWindow.Offset.Top;
-
-        UpdateLines();
     }
 }
