Some visual improvements

--- a/NodumVisualCalculator/Pages/_Host.cshtml
+++ b/NodumVisualCalculator/Pages/_Host.cshtml
@@ -21,6 +21,9 @@
     </app>
 
     <script src="_framework/blazor.server.js"></script>
+
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+
     <script src="/DraggableWindows.js"></script>
     <link rel="stylesheet" href="_content/BlazorDraggableWindow/styles.css">
 </body>
