--- a/NodumVisualCalculator/Components/MainNodeComponent.razor
+++ b/NodumVisualCalculator/Components/MainNodeComponent.razor
@@ -2,11 +2,13 @@
 {
     <div class="main-node" @onmousemove="DrawMainLine">
         <div class="main-node-header">
-            <div class="node-window-header-text">@_currentMainNode.Name</div>
-            <button @onclick="(() => _currentMainNode = _currentMainNode.Holder != null ? _currentMainNode.Holder : MainNode)">Back</button>
-            <button @onclick="CreateNewNodeHolder">Add New Node</button>
-            <button @onclick="CreateNewNumberNode">Add New Number Node</button>
-            <button @onclick="CreateNewAddNode">Add New Add Node</button>
+            <div class="main-node-header-left-buttons">
+                <img class="main-node-header-button" src="/image/OptionsButton.png">
+            </div>
+            <div class="main-node-header-text">@_currentMainNode.Name</div>
+            <div class="main-node-header-right-buttons">
+                <img class="main-node-header-button" src="/image/CloseButton.png">
+            </div>
         </div>
 
         @foreach (var line in _allLines)
@@ -26,9 +28,11 @@
                 <DraggableWindow @key="visualNode" X="@visualNode.Position.X" Y="@visualNode.Position.Y" AllowDrag="true" OnDragingWindow="@((e, w) => OnNodeDragging(e, w, visualNode))">
                     <WindowHeader>
                         <div class="node-window-header">
-                            <div class="node-window-header-text">@visualNode.Name (@visualNode.Position.X, @visualNode.Position.Y)</div>
-                            <div class="node-window-header-buttons">
+                            <div class="node-window-header-left-buttons">
                                 <img class="node-window-header-button" src="/image/OptionsButton.png">
+                            </div>
+                            <div class="node-window-header-text">@visualNode.Name (@visualNode.Position.X, @visualNode.Position.Y)</div>
+                            <div class="node-window-header-right-buttons">
                                 <img class="node-window-header-button" src="/image/CloseButton.png" @onclick="@(() => CloseWindow(visualNode))">
                             </div>
                         </div>
@@ -93,6 +97,7 @@
     protected override void OnInitialized()
     {
         _currentMainNode = MainNode;
+        CreateNewAddNode();
     }
 
     private void OnNodeSelect(MouseEventArgs args, VisualNode visualNode)
